added value class attribute to infobox for primary campaign goals and fixed some display issues

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1001,6 +1001,9 @@ img.zem-icon {
     display: table-cell;
     line-height: 16px;
     vertical-align: text-top;
+    &.primary .infobox-setting-value {
+		font-weight: bold;
+    }
 }
 
 .infobox-setting-label {
