--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -25,6 +25,7 @@
                 label="setting.name || '&nbsp;'"
                 value="setting.value" 
                 value-description="setting.description"
+                value-class="setting.valueClass"
                 details-label="setting.detailsLabel"
                 details-hide-label="setting.detailsHideLabel"
                 details-content="setting.detailsContent"
@@ -44,6 +45,7 @@
                 label="setting.name || '&nbsp;'"
                 value="setting.value" 
                 value-description="setting.description"
+                value-class="setting.valueClass"
                 details-label="setting.detailsLabel"
                 details-hide-label="setting.detailsHideLabel"
                 details-content="setting.detailsContent"
