--- a/client/one/partials/zem_infobox_setting.html
+++ b/client/one/partials/zem_infobox_setting.html
@@ -1,7 +1,7 @@
 <div class="infobox-setting">
     <div class="infobox-setting-label">{{label}}</div>
     
-    <div class="infobox-setting-value-container">
+    <div class="infobox-setting-value-container {{valueClass}}">
         <div ng-if="isSet(icon) && icon === 'happy'" style="" class="infobox-setting-icon">
             <img class="infobox-icon" ng-src="{{ config.static_url }}/one/img/happy_face.svg"></img>
         </div>
@@ -15,7 +15,7 @@
         <zem-help-popover 
             class="exclamation-popover"
             ng-if="isSet(warning)" 
-            content="{{ warning }}" 
+            content="{{ warning }}"
             placement="top">
         </zem-help-popover>
 
