--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1440,6 +1440,39 @@ img.zem-icon {
     filter: alpha(opacity=20); /* For IE8 and earlier */
 }
 
+.table-icon div {
+    img.zem-icon {
+        width: 12px;
+        height: 12px;
+        margin-bottom: 4px;
+    }
+}
+
+.zem-table-row {
+    &.happy {
+        td:first-child {
+            border-left: 5px solid #73BF44;
+        }
+    }
+    &.sad {
+        td:first-child {
+            border-left: 5px solid #CB2027;
+        }
+    }
+    &.average {
+        td:first-child {
+            border-left: 5px solid #fff;
+        }
+    }
+}
+
+.superperforming .zem-table-column-value {
+    color: #73BF44;
+}
+
+.underperforming .zem-table-column-value {
+    color: #CB2027;
+}
 
 .help-popover,
 .help-popover:hover,
@@ -2605,6 +2638,15 @@ img.zem-icon {
     display: inline-block;
     margin-bottom: -2px;
     background-image: url('img/data_status_icon.svg');
+}
+
+.performance-icon {
+    width: 12px;
+    height: 12px;
+    display: inline-block;
+    background-size: 12px;
+    margin-bottom: -2px;
+    background-image: url('img/neutral_face.svg');
 }
 
 .adgroup-status-icon-placeholder() {
