--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1465,15 +1465,17 @@ img.zem-icon {
             border-left: 5px solid #fff;
         }
     }
+
+    &.superperforming .zem-table-column-value {
+        color: #73BF44;
+    }
+
+    &.underperforming .zem-table-column-value {
+        color: #CB2027;
+    }
 }
 
-.superperforming .zem-table-column-value {
-    color: #73BF44;
-}
 
-.underperforming .zem-table-column-value {
-    color: #CB2027;
-}
 
 .help-popover,
 .help-popover:hover,
