--- a/client/one/components/zem-grid/grid.less
+++ b/client/one/components/zem-grid/grid.less
@@ -1,5 +1,17 @@
 .zem-grid-new-container {
 
+  .debug-panel {
+    float:left;
+    margin: 20px;
+    padding: 10px;
+    border: 1px solid orange;
+
+    label {
+      padding: 10px;
+      font-size: 12pt;
+    }
+  }
+
   border: solid lightgray 1px;
   width: 100%;
   height: 500px;
@@ -11,27 +23,60 @@
   .zem-grid {
     display: table;
     width: 100%;
+
+    .zem-grid-cell {
+      display: table-cell;
+      vertical-align: middle;
+      text-align: left;
+      padding: 8px;
+    }
+
+    .zem-grid-footer, .zem-grid-header {
+      background-color: #f6f6f6;
+      font-weight: 600;
+      display: table-row;
+    }
+
+    .zem-grid-body {
+      display: table-row-group;
+    }
+    .zem-grid-row {
+      display: table-row;
+
+      &.level-0 {
+        background-color: #f6f6f6;
+        div:first-child {
+          font-weight: 600;
+        }
+      }
+      &.level-1 {
+        background-color: #F4F4F4;
+        div:first-child {
+          padding-left: 20px !important;
+        }
+      }
+
+      &.level-2 {
+        background-color: #ececec;
+        div:first-child {
+          padding-left: 40px !important;
+        }
+      }
+
+      &.level-3 {
+        background-color: #e8e8e8;
+        div:first-child {
+          padding-left: 60px !important;
+        }
+      }
+
+      &.level-last {
+        div:not(:first-child) {
+          background-color: #ffffff;
+        }
+      }
+    }
+
   }
 
-  .zem-grid-row{
-    display: table-row;
-  }
-
-  .zem-grid-cell{
-    min-width: 100px;
-    display: table-cell;
-    vertical-align: middle;
-    padding: 8px;
-    text-align: left;
-  }
-
-  .zem-grid-footer, .zem-grid-header{
-    background-color: #f6f6f6;
-    font-weight: 600;
-    display: table-row;
-  }
-
-  .zem-grid-body{
-    display: table-row-group;
-  }
 }
