--- a/client/one/components/zem-grid/grid.less
+++ b/client/one/components/zem-grid/grid.less
@@ -1,4 +1,4 @@
-.zem-grid-new-container {
+.zem-grid-debug-container {
 
   .debug-panel {
     float:left;
@@ -11,7 +11,9 @@
       font-size: 12pt;
     }
   }
+}
 
+.zem-grid-container {
   border: solid lightgray 1px;
   width: 100%;
   height: 500px;
@@ -77,6 +79,9 @@
       }
     }
 
+    a {
+      cursor: pointer;
+    }
   }
 
 }
