--- a/client/one/partials/zem_grid.html
+++ b/client/one/partials/zem_grid.html
@@ -1,20 +1,20 @@
 <div class="zem-grid-container">
     <!-- DEBUG PANEL [START] -->
     <!-- TODO: move to development partial and bind with controller  -->
-    <!--<div class="debug-panel">-->
-        <!--<span>[DEBUG] Breakdowns : </span>-->
-        <!--<label ng-repeat="(breakdown, enabled) in DEBUG_BREAKDOWNS">-->
-            <!--<input type="checkbox" ng-model="DEBUG_BREAKDOWNS[breakdown]">-->
-            <!--{{breakdown}}-->
-        <!--</label>-->
-        <!--<button type="submit" class="btn btn-default" ng-click="DEBUG_APPLY_BREAKDOWN()">Submit</button>-->
-    <!--</div>-->
-    <!--<div class="debug-panel">-->
-        <!--<span> [DEBUG] Collapse : </span>-->
-        <!--<button type="submit" class="btn btn-default" ng-click="toggleCollapseLevel(1)">Toggle Level 1</button>-->
-        <!--<button type="submit" class="btn btn-default" ng-click="toggleCollapseLevel(2)">Toggle Level 2</button>-->
-        <!--<button type="submit" class="btn btn-default" ng-click="toggleCollapseLevel(3)">Toggle Level 3</button>-->
-    <!--</div>-->
+    <div class="debug-panel">
+        <span>[DEBUG] Breakdowns : </span>
+        <label ng-repeat="(breakdown, enabled) in DEBUG_BREAKDOWNS">
+            <input type="checkbox" ng-model="DEBUG_BREAKDOWNS[breakdown]">
+            {{breakdown}}
+        </label>
+        <button type="submit" class="btn btn-default" ng-click="DEBUG_APPLY_BREAKDOWN()">Submit</button>
+    </div>
+    <div class="debug-panel">
+        <span> [DEBUG] Collapse : </span>
+        <button type="submit" class="btn btn-default" ng-click="toggleCollapseLevel(1)">Toggle Level 1</button>
+        <button type="submit" class="btn btn-default" ng-click="toggleCollapseLevel(2)">Toggle Level 2</button>
+        <button type="submit" class="btn btn-default" ng-click="toggleCollapseLevel(3)">Toggle Level 3</button>
+    </div>
     <!-- DEBUG PANEL [END] -->
 
     <table zem-grid-fixed-header class="zem-grid table table-hover">
