scroller fix and more use of constants

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -910,6 +910,8 @@ img.zem-icon {
 .infobox-footer {
     height: 70px;
     overflow-y: auto;
+    // due to scroller
+    margin-right: -5px;
 }
 
 .infobox-header-row {
