separating new features to a new permission and added internal permission support to infobox

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1520,6 +1520,7 @@ img.zem-icon {
 }
 
 .select2-drop,
+.infobox-setting,
 .table-container {
      zem-internal-feature .internal {
         margin-right: 0.5em;
