--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -23,7 +23,8 @@
             <zem-infobox-setting 
                 ng-if="setting.type == 'setting'"
                 label="setting.name || '&nbsp;'"
-                value="setting.value" 
+                value="setting.value"
+                internal="setting.internal"
                 value-description="setting.description"
                 value-class="setting.valueClass"
                 details-label="setting.detailsLabel"
@@ -43,7 +44,8 @@
             <zem-infobox-setting 
                 ng-if="setting.type == 'setting'"
                 label="setting.name || '&nbsp;'"
-                value="setting.value" 
+                value="setting.value"
+                internal="setting.internal" 
                 value-description="setting.description"
                 value-class="setting.valueClass"
                 details-label="setting.detailsLabel"
