--- a/client/one/partials/zem_state_selector.html
+++ b/client/one/partials/zem_state_selector.html
@@ -7,7 +7,11 @@
         <div class="drop-arrow"></div>
     </button>
     <ul ng-if="isEditable" class="dropdown-menu enabled" dropdown-menu role="menu">
-        <li>
+        <li ng-class="{disabled: enablingAutopilotSourcesNotAllowed && !active}"
+                zem-lazy-popover-text="{{ active || !enablingAutopilotSourcesNotAllowed ? '' : 'To enable this Media Source please add more funds to Auto-Pilot\'s total Daily Budget.' }}"
+                zem-lazy-popover-placement="right"
+                zem-lazy-popover-animation-class="fade"
+                zem-lazy-popover-append-to-body="true">
             <a ng-click="setState(enabledValue, autopilotPausedValue)">
                 <div class="active-circle-icon"></div><span>Enabled</span>
             </a>
