- support for multiple conversions with same pixie and different windows - fixing (under)performing column highlights - campaign goals to ad group ibox - lighter gray for neutral emoticon - show primary goal label only if there are more than one goals

--- a/client/one/partials/campaign_settings.html
+++ b/client/one/partials/campaign_settings.html
@@ -33,11 +33,10 @@
             <div class="form-group section table-campaign-goals">
                 <div class="row">
                     <label class="col-xs-2 control-label">
-                        <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_see_campaign_goals')" popover-placement="right"></zem-internal-feature>
-                        Campaign goals:
+                        <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_see_campaign_goals')" popover-placement="right"></zem-internal-feature>Campaign goals:
                     </label>
                     <span class="col-xs-4">
-                        <span class="pull-right primary-goal-label">Primary goal</span>
+                        <span ng-show="campaignGoals.length > 1" class="pull-right primary-goal-label">Primary goal</span>
                     </span>
                 </div>
 
