--- a/client/one/partials/zem_campaign_goals.html
+++ b/client/one/partials/zem_campaign_goals.html
@@ -45,7 +45,7 @@
             </button>
         </div>
         <div class="col-xs-7 helper-label nopadding" ng-show="(campaignGoals.length || 0) > 1">
-            Click on a goal to set it as primary <zem-help-popover content="Primary goal will be used for autooptimizing your campaign." placement="top"></zem-help-popover>
+            Click on a goal to set it as primary <zem-help-popover content="Primary goal will be used for auto-optimizing your campaign." placement="top"></zem-help-popover>
         </div>
     </div>
 </div>
