--- a/client/one/partials/edit_campaign_goal_modal.html
+++ b/client/one/partials/edit_campaign_goal_modal.html
@@ -68,7 +68,7 @@
                     <div class="loader"></div>
                 </div>
                 <div class="col-xs-4" ng-if="availablePixels.length">
-                    <ui-select theme="select2" search-enabled="false" id="pixel-slug-select" class="form-control" ng-model="campaignGoal.conversionGoal.goalId"  ng-disabled="!!campaignGoal.id">
+                    <ui-select theme="select2" search-enabled="false" id="pixel-slug-select" class="form-control" ng-model="campaignGoal.conversionGoal.goalId"  ng-disabled="!!campaignGoal.id" on-select="refreshConversionWindows(campaignGoal.conversionGoal.goalId)">
                         <ui-select-match>{{$select.selected.slug}}</ui-select-match>
                         <ui-select-choices repeat="pixel.id as pixel in availablePixels">
                             {{pixel.slug}}
@@ -91,12 +91,12 @@
                 </div>
             </div>
 
-            <div class="form-group" ng-if="showConversionPixelForm()" ng-class="{'has-error': !!errors.conversionWindow}">
+            <div class="form-group" ng-if="showConversionPixelForm()" ng-class="{'has-error': !!errors.conversionGoal.conversionWindow}">
                 <label for="pixel-conversion-window-select" class="col-xs-4 control-label">
                     Conversion window
                     <zem-help-popover content="Conversion will be counted if less than the specified amount of time has passed before the first visit and the actual conversion." placement="top"></zem-help-popover>
                 </label>
-                <div class="col-xs-4">
+                <div class="col-xs-4" ng-show="conversionWindows.length">
                     <ui-select theme="select2" search-enabled="false" id="pixel-conversion-window-select" class="form-control" ng-model="campaignGoal.conversionGoal.conversionWindow"  ng-disabled="!!campaignGoal.id">
                         <ui-select-match>{{$select.selected.name}}</ui-select-match>
                         <ui-select-choices repeat="window.value as window in conversionWindows">
@@ -104,6 +104,9 @@
                         </ui-select-choices>
                     </ui-select>
                 </div>
+				<div class="col-xs-4" ng-show="!conversionWindows.length">
+					There are no more available conversion windows for this pixie.
+				</div>
                 <div class="col-xs-4">
                     <label ng-repeat="error in errors.conversionGoal.conversionWindow" class="control-label small error" for="pixel-conversion-window-select">{{ error }}</label>
                 </div>
