Add Id columns to report.

--- a/client/one/partials/download_export_report_modal.html
+++ b/client/one/partials/download_export_report_modal.html
@@ -44,7 +44,7 @@
             <div class="col-xs-4">
                 <input id="add-ids-checkbox"
                        type="checkbox"
-                       ng-model="export.addIds"
+                       ng-model="export.includeIds"
                        class="checkbox">
             </div>
         </div>
