icon list directive and added icon list for campaign goal statuses

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1496,7 +1496,10 @@ img.zem-icon {
     }
 }
 
-
+ul.icon-list {
+    padding: 0;
+    list-style-type: none;
+}
 
 .help-popover,
 .help-popover:hover,
