--- a/client/one/partials/add_scheduled_report_modal.html
+++ b/client/one/partials/add_scheduled_report_modal.html
@@ -81,6 +81,19 @@
           </div>
         </div>
 
+        <div class="form-group" ng-if="hasPermission('zemauth.can_include_model_ids_in_reports')">
+            <div class="col-xs-4">
+                <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_include_model_ids_in_reports')" popover-placement="right"></zem-internal-feature>
+                <label for="add-ids-checkbox" class="control-label">Add IDs to report</label>
+            </div>
+            <div class="col-xs-4">
+                <input id="add-ids-checkbox"
+                       type="checkbox"
+                       ng-model="export.includeIds"
+                       class="checkbox">
+            </div>
+        </div>
+
         <div class="form-group" ng-class="{'has-error': !!validationErrors.recipient_emails}">
             <label for="recipient-emails-textarea" class="col-xs-4 control-label" id="recipient-emails-label">
                 Recipient emails
