--- a/client/one/partials/download_export_report_modal.html
+++ b/client/one/partials/download_export_report_modal.html
@@ -36,10 +36,10 @@
           </div>
         </div>
 
-        <div class="form-group" ng-if="!!hasPermission('zemauth.can_include_model_ids_in_reports')">
+        <div class="form-group" ng-if="hasPermission('zemauth.can_include_model_ids_in_reports')">
             <div class="col-xs-4">
                 <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_include_model_ids_in_reports')" popover-placement="right"></zem-internal-feature>
-                <label for="by-day-checkbox" class="control-label">Add IDs to report</label>
+                <label for="add-ids-checkbox" class="control-label">Add IDs to report</label>
             </div>
             <div class="col-xs-4">
                 <input id="add-ids-checkbox"
