Fix client tests

--- a/client/one/partials/ad_group_contentadsplus.html
+++ b/client/one/partials/ad_group_contentadsplus.html
@@ -54,7 +54,9 @@
                     columns="columns"
                     order="order"
                     level="level"
-                    export-sources="false">
+                    export-sources="false"
+                    zem-has-permission="hasPermission"
+                    zem-is-permission-internal="isPermissionInternal">
                 </zem-export-plus>
             </div>
             <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories" local-storage-prefix="localStoragePrefix"></zem-custom-table-cols>
