--- a/client/one/partials/ad_group_sources.html
+++ b/client/one/partials/ad_group_sources.html
@@ -43,7 +43,9 @@
                     columns="columns"
                     order="order"
                     level="level"
-                    export-sources="true">
+                    export-sources="true"
+                    zem-has-permission="hasPermission"
+                    zem-is-permission-internal="isPermissionInternal">
                 </zem-export-plus>
             </div>
 
