--- a/client/one/partials/all_accounts_accounts.html
+++ b/client/one/partials/all_accounts_accounts.html
@@ -40,7 +40,9 @@
                     columns="columns"
                     order="order"
                     level="level"
-                    export-sources="false">
+                    export-sources="false"
+                    zem-has-permission="hasPermission"
+                    zem-is-permission-internal="isPermissionInternal">
                 </zem-export-plus>
             </div>
 
