fixing border alignment and adding neutral faces to infobox

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1470,6 +1470,9 @@ img.zem-icon {
 }
 
 .zem-table-row {
+    td:first-child {
+        border-left: 5px solid transparent;
+    }
     &.happy {
         td:first-child {
             border-left: 5px solid #73BF44;
@@ -1478,11 +1481,6 @@ img.zem-icon {
     &.sad {
         td:first-child {
             border-left: 5px solid #CB2027;
-        }
-    }
-    &.average {
-        td:first-child {
-            border-left: 5px solid #fff;
         }
     }
 
