fixing icons and goal performance table bug

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1500,6 +1500,18 @@ ul.icon-list {
     list-style-type: none;
 }
 
+ul.icon-list li {
+    color: #888;
+    font-size: 13px;
+    line-height: 16px;
+
+    img.zem-icon {
+        width: 13px;
+        height: 13px;
+        margin-bottom: 5px;
+    }
+}
+
 .help-popover,
 .help-popover:hover,
 .help-popover:active,
