--- a/client/one/partials/zem_icon_list.html
+++ b/client/one/partials/zem_icon_list.html
@@ -1,5 +1,8 @@
-<div class="icon-list-container">
-    <zem-icon zem-lazy-popover-template="'iconlistPopover.html'" zem-lazy-popover-placement="top" img-class="zem-icon-happy" zem-lazy-popover-append-to-body="true" file="{{ iconFile }}" ng-if="iconFile" img-class="{{ iconClass }}"></zem-icon>
+<div class="icon-list-container" ng-if="statusList.length">
+    <zem-icon zem-lazy-popover-template="'iconlistPopover.html'" zem-lazy-popover-placement="top" img-class="zem-icon-happy" zem-lazy-popover-append-to-body="true" file="{{ iconFile }}" img-class="{{ iconClass }}"></zem-icon>
+</div>
+<div class="icon-list-container" ng-if="!statusList.length">
+	<zem-icon file="{{ iconFile }}" img-class="{{ iconClass }}"></zem-icon>
 </div>
 <script id="iconlistPopover.html" type="text/ng-template">
     <ul class="icon-list">
@@ -8,3 +11,4 @@
         </li>
     </ul>
 </script>
+
