simplified icon list directive

--- a/client/one/partials/zem_icon_list.html
+++ b/client/one/partials/zem_icon_list.html
@@ -2,7 +2,7 @@
     <zem-icon zem-lazy-popover-template="'iconlistPopover.html'" zem-lazy-popover-placement="top" img-class="zem-icon-happy" zem-lazy-popover-append-to-body="true" file="{{ iconFile }}" img-class="{{ iconClass }}"></zem-icon>
 </div>
 <div class="icon-list-container" ng-if="!statusList.length">
-	<zem-icon file="{{ iconFile }}" img-class="{{ iconClass }}"></zem-icon>
+	<zem-icon file="neutral_face.svg" img-class="img-icon-neutral"></zem-icon>
 </div>
 <script id="iconlistPopover.html" type="text/ng-template">
     <ul class="icon-list">
