Added autopilot icon to navigation pane if adgroup is on autopilot

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2710,6 +2710,11 @@ ul.icon-list li {
     background-image: url('img/adgroup_status_paused_gray.svg');
 }
 
+.adgroup-status-autopilot-icon {
+    .adgroup-status-icon-placeholder();
+    background-image: url('img/auto_pilot_icon.svg');
+}
+
 .adgroup-status-landing-mode-icon {
     .adgroup-status-icon-placeholder();
     width: 18px;
