--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1005,6 +1005,15 @@ img.zem-icon {
     background-size: 18px 18px;
 }
 
+.infobox-autopilot-icon {
+    color: @infobox-black;
+    text-align: center;
+    background-image: url('img/auto_pilot_icon.svg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 15px 15px;
+}
+
 .infobox-icon {
     width: 13px;
     height: 13px;
