Fixed header and footer prototype.

--- a/client/one/components/zem-grid/templates/zem_grid_body.html
+++ b/client/one/components/zem-grid/templates/zem_grid_body.html
@@ -1,7 +1,9 @@
 <div class="zem-grid-body">
-    <zem-grid-row ng-repeat="row in rows track by $index"
-          ng-if="row.visible"
-          row="row"
-          options="ctrl.options"
-    ></zem-grid-row>
+    <div class="zem-grid-table">
+        <zem-grid-row ng-repeat="row in rows track by $index"
+              ng-if="row.visible"
+              row="row"
+              options="ctrl.options"
+        ></zem-grid-row>
+    </div>
 </div>
