--- a/client/one/components/zem-grid/styles/grid.less
+++ b/client/one/components/zem-grid/styles/grid.less
@@ -16,34 +16,50 @@
 .zem-grid-container {
   border: solid lightgray 1px;
   width: 100%;
-  height: 500px;
-  overflow: auto;
 
   font-size: 13px;
   color: #454545;
 
   .zem-grid {
-    display: table;
     width: 100%;
+    overflow-x: auto;
 
     .zem-grid-cell {
-      display: table-cell;
       vertical-align: middle;
       text-align: left;
       padding: 8px;
+      white-space: nowrap;
     }
 
-    .zem-grid-footer, .zem-grid-header {
+    .zem-grid-header, .zem-grid-footer {
+      float: left;
+      white-space: nowrap;
+
       background-color: #f6f6f6;
       font-weight: 600;
-      display: table-row;
+
+      .zem-grid-cell {
+        display: inline-block;
+        // width: 200px;
+      }
     }
 
     .zem-grid-body {
-      display: table-row-group;
+      width: 100%;
+      height: 500px;
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+    .zem-grid-table {
+      display: table;
+      width: 100%;
     }
     .zem-grid-row {
       display: table-row;
+
+      .zem-grid-cell {
+        display: table-cell;
+      }
 
       &.level-0 {
         background-color: #f6f6f6;
@@ -69,6 +85,13 @@
         background-color: #e8e8e8;
         div:first-child {
           padding-left: 60px !important;
+        }
+      }
+
+      &.level-4 {
+        background-color: #e2e2e2;
+        div:first-child {
+          padding-left: 80px !important;
         }
       }
 
