--- a/client/one/components/zem-grid/templates/zem_grid_body.html
+++ b/client/one/components/zem-grid/templates/zem_grid_body.html
@@ -1,9 +1,10 @@
 <div class="zem-grid-body">
     <div class="zem-grid-table">
         <zem-grid-row ng-repeat="row in rows track by $index"
-              ng-if="row.visible"
-              row="row"
-              options="ctrl.options"
+                      ng-if="row.visible"
+                      row="row"
+                      options="ctrl.options"
+                      columns-widths="ctrl.columnsWidths"
         ></zem-grid-row>
     </div>
 </div>
