--- a/client/one/components/zem-grid/templates/zem_grid_cell.html
+++ b/client/one/components/zem-grid/templates/zem_grid_cell.html
@@ -1,4 +1,4 @@
-<div class="zem-grid-cell">
+<div class="zem-grid-cell" ng-style="getCellStyle($index)">
    <span ng-if="$index===0 && row.data.breakdown && row.level>0">
         <a ng-click="toggleCollapse(row)" class="action">
             {{row.collapsed ? "[ + ]" : "[ - ]"}}
