--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2719,6 +2719,11 @@ ul.icon-list li {
     background-image: url('img/adgroup_status_paused_gray.svg');
 }
 
+.adgroup-status-reloading-icon {
+    .adgroup-status-icon-placeholder();
+    background-image: url('img/loader.gif');
+}
+
 .adgroup-status-autopilot-icon {
     .adgroup-status-icon-placeholder();
     background-image: url('img/auto_pilot_icon.svg');
